examples/invalid/syntaxErr/if/ifNothen.wacc
# if missing then clause
# Output:
# #syntax error#

#Program:#

begin
  if true 
  else
    skip
  fi
end

